--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,16 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
-body {
-    font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
-}
-
-*{
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-}
-
 .html {
   box-sizing: content-box;
 }
@@ -41,6 +28,62 @@ body {
 
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
+}
+
+*{
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+.driver-container {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 10px;
+    width: calc(50% - 20px);
+    float: left;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.driver-container a {
+    color: #000;
+    text-decoration: none;
+}
+.driver-container a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+.driver-name {
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.driver-image {
+    width: 100%;
+    max-width: 150px;
+    display: block;
+    margin: 0 auto 10px;
+}
+.driver-info {
+    text-align: center;
+    margin-bottom: 0;
+}
+a {
+    color: #ddd;
+}
 h1 {
     font-weight: 700;
     text-align: center;
